debug: make everyone contain an appproject too

--- a/ingress-nginx/ingress-nginx-app.yaml
+++ b/ingress-nginx/ingress-nginx-app.yaml
@@ -19,3 +19,19 @@ spec:
     name: in-cluster
   syncPolicy:
     automated: {}
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: ingress-nginx-controller
+spec:
+  sourceRepos:
+    - https://github.com/Bidon15/celestia-node-cluster.git
+  destinations:
+    - namespace: '*'
+      name: in-cluster
+    - namespace: '*'
+      name: '*'
+  clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
