--- a/apps/config/app-of-apps.yaml
+++ b/apps/config/app-of-apps.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: validator-resources
-  namespace: argocd
+  namespace: argo-cd
 spec:
   project: app-val
   source:
