change to default for everyone

--- a/apps/config/app-of-apps.yaml
+++ b/apps/config/app-of-apps.yaml
@@ -4,7 +4,7 @@ metadata:
   name: validator-resources
   namespace: argo-cd
 spec:
-  project: app-val
+  project: default
   source:
     repoURL: https://github.com/Bidon15/celestia-node-cluster.git
     targetRevision: main
