--- a/apps/config/project.yaml
+++ b/apps/config/project.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: app-val
+  name: default
   namespace: argo-cd
 spec:
   description: App of apps for validator setup.
